# retro.tools-backend

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  build.sh  buildah.sh  docker-compose.yml  firebase.json  firestore.rules
.github/workflows/: CI.yml  CICD.yml  CICDyml
docs/: WINDOWS.md
extras/loadtesting/: README.md  locustfile.py
extras/monitoring/: docker-compose.yml  prometheus.yml
extras/monitoring/grafana/dashboards/: dashboard.yml  retrograde.json
extras/monitoring/grafana/datasources/: datasource.yml
migrations/2019-07-07-035000_create_random_string/: down.sql  up.sql
migrations/2019-07-07-035013_create_board/: down.sql  up.sql
migrations/2019-07-07-035020_create_participant/: up.sql
migrations/2019-07-07-035021_create_participant_board/: down.sql  up.sql
migrations/2019-07-07-035142_create_participant/: down.sql  up.sql
migrations/2019-07-07-040022_create_rank/: down.sql  up.sql
migrations/2019-07-07-040354_create_card/: down.sql  up.sql
migrations/2019-07-07-040520_create_vote/: down.sql  up.sql
migrations/2020-01-01-035648_board_date_column/: down.sql  up.sql
migrations/2020-01-10-103157_card_owner_column/: down.sql  up.sql
migrations/2020-01-25-114841_rank_json_field/: down.sql  up.sql
migrations/2020-06-25-113823_optional_card_author/: down.sql  up.sql
migrations/2020-07-04-033732_board_json/: down.sql  up.sql
scripts/: fetch-protos.sh
scripts/orphan-deleter/: .prettierrc.yaml  README.md  main.js  package-lock.json  package.json
scripts/psql-to-firestore/: index.js  package-lock.json  package.json
scripts/subcollection-deleter/: main.js  package-lock.json  package.json
scripts/update-all-boards/: README.md  main.js  package-lock.json  package.json
seeds/: seed.sql
src/: boards.rs  cards.rs  catchers.rs  cloudrun.rs  config.rs  error.rs  fairings.rs  firestore.rs  guards.rs  integration_tests.rs  macros.rs  main.rs  metrics.rs  models.rs  persistence.rs  ranks.rs  schema.rs  testing.rs  token.rs  votes.rs
src/boards/: db.rs  mod.rs  models.rs  routes.rs  tests.rs
src/cards/: db.rs  mod.rs  models.rs  routes.rs  tests.rs
src/columns/: db.rs  mod.rs  models.rs  routes.rs
src/firestore/: macros.rs  mod.rs
src/guards/: mod.rs
src/integration_tests/: board_tests.rs  card_tests.rs  column_tests.rs  mod.rs
src/objects/: mod.rs
src/participants/: db.rs  mod.rs  models.rs  routes.rs
src/persistence/: boards.rs  cards.rs  macros.rs  mod.rs  participants.rs  ranks.rs  votes.rs
src/ranks/: mod.rs  tests.rs
src/votes/: mod.rs  tests.rs
