[package]
name = "retrograde"
version = "0.3.0"
authors = ["Dylan McGannon <peltium@gmail.com>"]
edition = "2021"

[dependencies]
# General
dotenv = "^0.15"
bytes = "^1.10"
reqwest = { version = "^0.13.3", default-features = false, features = [
  "rustls",
  "blocking",
] }
chrono = "^0.4"
settimeout = "^0.1.2"
tokio = "^1.52.3"
csv = "^1.3"
firestore = { version = "^0.49", default-features = false, features = [
  "tls-webpki-roots",
] }
struct-path = "^0.2"

# Firebase custom auth
jwt-simple = { version = "^0.12.16", default-features = false, features = [
  "pure-rust",
] }

# Actix
actix-web = "^4.10"
actix-http = "^3.10"
actix-identity = "^0.9"
actix-session = { version = "^0.11", features = ["cookie-session"] }
env_logger = "^0.11"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.31"
actix-cors = "^0.7"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dev-dependencies]
tokio = { version = "^1.52", features = ["macros", "rt-multi-thread"] }
gcloud-sdk = { version = "^0.30", features = [
  "google-firestore-v1",
], default-features = false }
